--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "lucide-react": "^0.510.0",
-    "prettier": "3.5.3",
+    "prettier": "^3.5.3",
     "tailwindcss": "^4.1.6",
     "typescript": "^5"
   }
