--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.1",
+    "chart.js": "^4.4.9",
     "cycling-manager-2025": "file:",
     "next": "^15.3.2",
     "postcss": "^8.5.3",
