--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.1",
+    "@stomp/stompjs": "^7.1.1",
     "chart.js": "^4.4.9",
     "cycling-manager-2025": "file:",
     "next": "^15.3.2",
@@ -25,8 +26,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/sockjs-client": "^1.5.4",
     "lucide-react": "^0.510.0",
     "prettier": "^3.5.3",
+    "sockjs-client": "^1.6.1",
     "tailwindcss": "^4.1.6",
     "typescript": "^5"
   }
