--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stomp/stompjs": "^7.1.1",
     "chart.js": "^4.4.9",
     "cycling-manager-2025": "file:",
+    "date-fns": "^4.1.0",
     "next": "^15.3.2",
     "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
