--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "chart.js": "^4.4.9",
     "cycling-manager-2025": "file:",
     "date-fns": "^4.1.0",
+    "gsap": "^3.13.0",
+    "motion": "^12.16.0",
     "next": "^15.3.2",
     "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
